tests/type/good/arithmetic.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn f() {
	var a = 1 + 2 * 3 - 4 / 2;
	var b = 1.5 + 2.5;
	var c = "foo" + "bar";
	var d = 1 < 2;
	var e = 1.0 >= 2.0;
	var g = 1 == 1;
	var h = "x" == "y";
	var i = (a > 0) && (b < 10.0);
}

scene main
{
}
