tests/type/errors/assign_void.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn f() {
}

scene main
{
	var a = f();
}
